--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "5.4.0"
   },
   "dependencies": {
+    "bulma-stylus": "^0.8.0",
     "cheerio": "^1.0.0-rc.9",
     "hexo": "^5.0.0",
     "hexo-deployer-git": "^3.0.0",
@@ -22,10 +23,12 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-githubcalendar": "^1.2.3",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
+    "hexo-theme-icarus": "^4.2.0",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1"
   }
