--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -46,7 +46,7 @@ social:
     # iconfont icon-git-copy: https://github.com/JacianLiu || Github
     iconfont icon-youxiang1: mailto:JacianLiu@gmail.com || Email
     iconfont icon-cnblogs: https://www.cnblogs.com/jacian || 博客园
-    iconfont icon-csdn: https://blog.csdn.net/qq_40951066 || CSDN
+    iconfont icon-csdn: https://blog.csdn.net/JacianLiu || CSDN
     iconfont icon-telegram: https://t.me/jacian_6 || Telegram
 
 # search (搜索)
