--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Deploy to Tencent CloudBase
         uses: TencentCloudBase/cloudbase-action@v2
         with:
-          secretId: ${{secrets.secretId}}
-          secretKey: ${{secrets.secretKey}}
-          envId: ${{secrets.envId}}
+          secretId: ${{secrets.SECRET_ID}}
+          secretKey: ${{secrets.SECRET_KEY}}
+          envId: ${{secrets.ENV_ID}}
