--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "version": "5.4.0"
   },
   "dependencies": {
-    "hexo": "^6.0.0",
+    "bulma-stylus": "^0.8.0",
+    "hexo": "^5.4.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -20,10 +21,12 @@
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
+    "hexo-theme-icarus": "^4.5.0",
     "hexo-theme-landscape": "^0.0.3"
   }
 }
