--- a/source/easy-yapi-markdown.cn.config
+++ b/source/easy-yapi-markdown.cn.config
@@ -28,8 +28,8 @@ md.request=> 请求信息
 md.request.path=**路径参数:**
 md.request.headers=**请求头:**
 md.request.query=**请求参数:**
-md.request.body=**请求头:**
-md.request.body.demo=**Body示例:**
+md.request.body=**请求体:**
+md.request.body.demo=**请求示例:**
 md.request.form=**表单:**
 md.response=> 返回数据
 md.response.headers=**响应头:**
