--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -443,7 +443,7 @@ cloudflare_analytics:
 
 # Microsoft Clarity
 # https://clarity.microsoft.com/
-microsoft_clarity:
+microsoft_clarity: l89i5k6ik2
 
 # Advertisement
 # --------------------------------------
